0.11

2018-11-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* combobox/custom_comboboxlayoutmanager.C: A combo-box popup
	wasn't getting closed if the currently-selected item gets selected
	again.

	* list layout manager settings for hierarchical lists.

2018-11-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* list layout manager: added optional row_alignments setting.
	Implemented hierindent{}.

	* listlayoutmanager/listlayoutmanager.C: Added remove_items().

	* listlayoutmanager/list_element_impl.C: Expose the style for list
	item separator in new_listlayoutmanager.list_separator_border

0.10.0

2018-11-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fixed-size shading theme option.

	* Pane layout manager overhaul.

2018-11-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* popup/popup_handler.C: Fix combo-box popup delay.

2018-11-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/panelayoutmanagerobj.H: Remove pane_lock, since
	the pane layout manager derives from the grid layout manager, and
	will automatically acquire a lock.

2018-11-01  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/gridlayoutmanagerobj.H: Add a lock on the internal
	grid map. Constructing a gridlayoutmanager object automatically
	acquires the lock.

2018-10-30  Sam Varshavchik  <mrsam@courier-mta.com>

	* listlayoutmanager/list_element_impl.C: Make sure inner list
	container's borders are always drawn in the full height of the list.

	* panelayoutmanager/panelayoutmanager_impl.H: Fix pane container's
	metrics.

0.9.0

2018-10-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* API for implementing Cut/Copy/Paste menu options.

	* menu/menu.C: Implement on_popup_state_update().

0.8.0

2018-10-12  Sam Varshavchik  <mrsam@courier-mta.com>

	* Added the item layout manager.
0.7.1

2018-09-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* Table layout manager, derived from the list layout manager.

2018-09-09  Sam Varshavchik  <mrsam@courier-mta.com>
